--- a/Assets/Scripts/Runtime/Foxy.Flipside.Runtime.asmdef
+++ b/Assets/Scripts/Runtime/Foxy.Flipside.Runtime.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "Foxy.Flipside.Runtime",
     "rootNamespace": "Foxy.Flipside",
-    "references": [],
+    "references": [
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
